fix alignment issue, spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h4 {
 p {
     font-size: 0.875em;
     line-height: 21px;
-    padding: 0 30px;
+    /*padding: 0 30px;*/
 }
 
 /*The widths are in a percentage!*/
@@ -134,7 +134,7 @@ header nav ul li a {
 }
 
 .main-title p {
-    padding: 0;
+    /* padding: 0; */
     font-size: 16px;
     line-height: 25px;
 }
@@ -145,7 +145,6 @@ header nav ul li a {
     width: 100%;
     height: auto;
     border-top: 1px solid #eee;
-    text-align: center;
 }
 
 .section-one h4 {
@@ -161,7 +160,7 @@ header nav ul li a {
 
 .section-two h4,
 .section-three h4 {
-    padding: 10px 30px;
+    /*padding: 10px 30px;*/
 }
 
 .menu {
@@ -201,4 +200,23 @@ footer span {
     text-transform: lowercase;
     color: #77a466;
     font-size: 0.875em;
+}
+
+@media all and (min-width:768px) {
+    /* Tablet styles here */
+
+    .bottom-section {}
+
+    .section-one {}
+
+    .section-two {}
+
+    .section-three {}
+
+
+}
+
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+
 }
